--- a/selection algorithm 2.Rmd
+++ b/selection algorithm 2.Rmd
@@ -31,6 +31,7 @@ library(tidyverse)
 #remember to delete duplicates
 setwd("~/OneDrive/Beruflich/Peace Child International/Model Citizens Assembly/Climate Crisis/Dataset")
 responses <- read_excel("MCA-02-Jury Application Form (Responses).xlsx")
+original_responses <- responses
 ```
 
 
@@ -57,16 +58,30 @@ for (i in 1:nrow(responses)) {
 }
 responses[,13] <- as.integer(unlist(responses[,13]))
 ```
+Cleaning education
+```{r}
+for (i in 1:nrow(responses)) {
+  if (responses[i,9] == "No formal qualifications") responses[i,9] <- "1"
+  if (responses[i,9] == "GCSEs or equivalent") responses[i,9] <- "1"
+  if (responses[i,9] == "A-levels or equivalent") responses[i,9] <- "2"
+  if (responses[i,9] == "Bachelor's degree") responses[i,9] <- "2"
+  if (responses[i,9] == "Master's degree") responses[i,9] <- "3"
+  if (responses[i,9] == "PhD") responses[i,9] <- "3"
+}
+responses[,9] <- as.integer(unlist(responses[,9]))
+```
 
 
 Dealing with NAs
 ```{r}
 sum(is.na(responses))
+responses[,19] <- as.integer(unlist(responses[,19]))
 for (row in 1:nrow(responses)) {
   for (col in 1:ncol(responses)) {
+    if (col == 8  || col == 19) responses[row,col] <- 1
     if (is.na(responses[row,col]) == TRUE) {
-      if (row == 1) responses[row,col] <- responses[row,col-1] else
-        responses[row,col] <- responses[row-1,col]
+      #if (row == 1) responses[row,col] <- responses[row,col-1] else
+      responses[row,col] <- tail(names(sort(table(responses[-row,col]))), 1)
     } 
   }
 }
@@ -368,7 +383,7 @@ rep.6c.double <- rep.6c
 
 fixing certain respondents 
 ```{r}
-fixed <- c(1,4,6,7,9,30,10,12,14,15,45)
+fixed <- c(1,4,6,7,9,10,12,14,15,39,41,45)
 
 possible.in.4c <- c(young.white.female$Index,young.non.white.female$Index,young.white.male$Index,young.non.white.male$Index,old.white.female$Index)
 fixed.4c <- vector(length = length(fixed))
@@ -390,7 +405,7 @@ if (length(fixed.4c)>0) {
     for (j in 1:length(fixed.4c)) {
       if (any(rep.4c[i,] == fixed.4c[j])) existing <- existing + 1
     }
-    if (existing == length(fixed.4c)-1) deleteme[i] <- FALSE
+    if (existing == length(fixed.4c)) deleteme[i] <- FALSE
     if (round(i/1000000) == i/1000000) print(round(50*i/nrow(rep.4c)))
   }
   print(nrow(rep.4c))
@@ -508,11 +523,10 @@ paste0("Testing ",nrow(rep.6c)*nrow(rep.4c)," combinations")
 
 stuff from within for-loop
 ```{r}
-setwd("~/OneDrive/Beruflich/Peace Child International/Model Citizens Assembly/Climate Crisis/Dataset")
+setwd("~/OneDrive/Beruflich/Peace Child International/Model Citizens Assembly/Climate Crisis/Model Citizens Assembly")
 goal = read_excel("goals_values.xlsx")
 goal = data.frame(goal)
 attnames = read_excel("goals_names.xls")
-goal[2,1] = 100
 numb_appl = nrow(rawdata)
 number = seq(1,nrow(rawdata),1)
 rawdata = cbind(number,rawdata)
@@ -559,7 +573,7 @@ time.start <- Sys.time()
 
 time.stop <- Sys.time()
 time.elapsed <- time.stop - time.start
-
+time.now <- Sys.time()
 while (n <= length(index.com)) {
   m <- index.com[n]
   #indicator
@@ -632,19 +646,18 @@ while (n <= length(index.com)) {
   l = match(k,output[,ncol(output),1])
   comparison[m,] <- output[l,,1]
   n <- n + 1
+  time.before <- time.now
+  time.now <- Sys.time()
+  time.elapsed <- difftime(time.now, time.before, units = "mins")
+  n.left <- length(index.com) - n
+  time.left <- time.elapsed * n.left
   if (count == 5) {
-    time.elapsed <- difftime(Sys.time(), time.start, units = "mins")
-    n.left <- length(index.com) - n
-    time.left <- time.elapsed/count * n.left
-    if (time.left > 15) n <- length(index.com)
+    if (time.left > 60) n <- length(index.com)
     print(round(time.left))
   }
   if (count != 5) {
-    time.elapsed <- difftime(Sys.time(), time.start, units = "mins")
-    n.left <- length(index.com) - n
-    time.left <- time.elapsed/count * n.left
     if (count < 10) print(round(time.left))
-    if (count >= 10) if (round(count/20) == count/20) print(round(time.left))
+    if (count >= 10) if (round(count/40) == count/40) print(round(time.left))
   }
 }
 ```
@@ -674,9 +687,9 @@ l = match(k,comparison[,size_jury+1])
 #appl15 = output[l,15,1]
 subset = rawdata[comparison[l,c(1:size_jury)],]
 names = names_and_numbers[subset[,1],c(2:4)]
-names_attributes = responses[subset[,1],c(5:16)]
+names_attributes = original_responses[subset[,1],c(5:16)]
 final.table = cbind(names,names_attributes)
-#write.csv(final.table,"model1.csv")
+write.csv(final.table,"model1.csv")
 subset = subset[,2:12]
 final.table
 ```
@@ -686,7 +699,8 @@ final.table
 Plotting
 ```{r}
 #graph for all
-for (j in c(1:3,5:11)) {
+relevant <- c(1:3, 5:11)
+for (j in relevant) {
   a = sum(subset[,j]==1)/size_jury
   b = sum(subset[,j]==2)/size_jury
   c = sum(subset[,j]==3)/size_jury
@@ -737,7 +751,7 @@ for (j in c(1:3,5:11)) {
 ```
 
 
-```{r}
+#```{r}
 #second best
 dim(output)
 output = output[-l,,]
@@ -820,5 +834,5 @@ for (j in 1:11) {
 }
 
 
-```
+#```
 
